--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,17 @@
-kivy
-openpyxl
+certifi==2025.1.31
+charset-normalizer==3.4.1
+docutils==0.21.2
+et_xmlfile==2.0.0
+filetype==1.2.0
+idna==3.10
+Kivy==2.3.1
+Kivy-Garden==0.1.5
+kivy_deps.angle==0.4.0
+kivy_deps.glew==0.3.1
+kivy_deps.sdl2==0.8.0
+openpyxl==3.1.5
+Pygments==2.19.1
+pypiwin32==223
+pywin32==308
+requests==2.32.3
+urllib3==2.3.0
